# Proj

./: .gitignore  CLAUDE.md  README.md  build-hooks.js  dev-separate.js  electron-test.js  index.html  package-lock.json  package.json  tailwind.config.js  test-electron.js  vite.config.js
dist-electron/: main.js  preload.js
electron/: main.js  preload.js  remoteServer.js  videoOptimizer.js
public/remote/: index.html  remote.css  remote.js
src/: App.vue  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/components/: AddBibleSlide.vue  AddCanvaSlide.vue  AddImageSlide.vue  AddLocalVideoSlide.vue  AddWorshipStack.vue  AddYouTubeSlide.vue  AssetPicker.vue  CustomSlideEditor.vue  FontPicker.vue  InputDialog.vue  LibraryManager.vue  Logo.vue  Modal.vue  NewEventDialog.vue  NewLibraryDialog.vue  OpenLibraryDialog.vue  ProjectorVideoControls.vue  SelectEventDialog.vue  SlidePreview.vue  SlideStrip.vue  SlideThumb.vue  SongEditor.vue  SongPicker.vue  SongSlideEditor.vue  Toolbar.vue
src/components/slides/: SlideProjector.vue  SlideRenderer.vue  SlideStaged.vue  SlideThumbnail.vue  VideoPlayer.vue  WorshipSectionProjector.vue  YouTubePlayer.vue
src/components/worship/: WorshipControl.vue  WorshipProjector.vue
src/composables/: useFileOps.js  useKeyboard.js  useLibrary.js  usePresentation.js  useProjector.js  useWorship.js
src/parsers/: ChordProParser.js  OnSongParser.js
src/utils/: assetResolver.js  videoThumbnail.js
src/views/: ControlView.vue  ProjectorView.vue
